Body center align fixed

--- a/static/css/main-dynamic.css
+++ b/static/css/main-dynamic.css
@@ -4,6 +4,13 @@ html {
     margin: 0%;
 }
 
+body{
+    width: 100%;
+    height: 100%;
+    margin: 0!important;
+    padding: 0!important;
+}
+
 /*---------------------------------------------Top Navigation---------------------------------------------*/
 nav {
     height: 64px;
@@ -81,10 +88,16 @@ nav {
 }
 /*---------------------------------------------Body---------------------------------------------*/
 #data-body {
-    margin-top: 64px;
-    margin-left: 64px;
+    width: 100%;
+    height: 100%;
+    padding-top: 64px!important;
+    padding-left: 200px!important;
+    margin-right: 0!important;
+    margin-bottom: 0!important;
+    padding-right: 0!important;
+    padding-bottom: 0!important;
+    display: flex;
 }
-
 
 /*---------------------------------------------Responsive Stuff---------------------------------------------*/
 @media screen and (max-width: 599px) {
