--- a/static/css/main-static.css
+++ b/static/css/main-static.css
@@ -4,6 +4,13 @@ html {
     margin: 0%;
 }
 
+body{
+    width: 100%;
+    height: 100%;
+    margin: 0!important;
+    padding: 0!important;
+}
+
 /*---------------------------------------------Top Navigation---------------------------------------------*/
 nav {
     height: 64px;
@@ -71,10 +78,16 @@ nav {
 .material-icons.md-22 { font-size: 26px; }
 /*---------------------------------------------Body---------------------------------------------*/
 #data-body {
-    margin-top: 64px;
     width: 100%;
+    height: 100%;
+    padding-top: 64px!important;
+    padding-left: 200px!important;
+    margin-right: 0!important;
+    margin-bottom: 0!important;
+    padding-right: 0!important;
+    padding-bottom: 0!important;
+    display: flex;
 }
-
 /*---------------------------------------------Responsive Stuff---------------------------------------------*/
 @media screen and (max-width: 599px) {
     nav {
